@@ -128,6 +128,15 @@ Plot('welltops',plots,'Overlay')
 
 Result('four','four welltops','Overlay')
 
+Flow('tops.txt',None,
+     'echo %s in=$TARGET n1=%d data_format=ascii_float' % (' '.join(map(str,welltops.values())),len(welltops)))
+Flow('tops','tops.txt','dd form=native | sort')
+Plot('tops','spray axis=1 n=2 o=0 d=1 | graph min2=750 max2=4250 pad=n yreverse=y wantaxis=n wanttitle=n')
+
+Flow('ttops','tdr DEPT tops',
+     'iwarp warp=${SOURCES[1]} o1=932 d1=1 n1=3307 | inttest1 nw=4 interp=spline coord=${SOURCES[2]}')
+Plot('ttops','spray axis=1 n=2 o=0 d=1 | graph min2=0.28 max2=2.28 pad=n yreverse=y wantaxis=n wanttitle=n')
+
 # Convert to two-way-traveltime
 
 Flow('zt','z tdr','cut f1=-20 | iwarp warp=${SOURCES[1]} o1=0 d1=0.004 n1=750')
@@ -136,39 +145,41 @@ Flow('rt','rc tdr','cut f1=-20 | iwarp warp=${SOURCES[1]} o1=0 d1=0.004 n1=750')
 Plot('z','DEPT z',
      '''
      cmplx ${SOURCES[1]} | window n1=21692 |
-     graph transp=y yreverse=y min1=750 max1=4250 plotfat=3
+     graph transp=y yreverse=y min1=750 max1=4250 plotfat=3 plotcol=7
      title=impedance unit1=m label2= unit2="kg/(m\^2\_s)" labelsz=12 titlesz=15
      ''')
+Plot('zw','z tops','Overlay')
 
 Plot('zt',
      '''
      window min1=0.28 max1=2.28 |
-     graph transp=y yreverse=y plotfat=3
+     graph transp=y yreverse=y plotfat=3 plotcol=7
      title=impedance label1=Time unit1=s pad=n 
      label2= unit2="kg/(m\^2\_s)" labelsz=12 titlesz=15
      ''')
+Plot('ztw','zt ttops','Overlay')
 
 Plot('rt',
      '''
      window min1=0.28 max1=2.28 |
-     graph transp=y yreverse=y plotfat=3 
+     graph transp=y yreverse=y plotfat=3 plotcol=7
      title=reflectivity label1=Time unit1=s pad=n 
      label2= unit2= labelsz=12 titlesz=15
      ''')
+Plot('rtw','rt ttops','Overlay')
 
 # Create synthetic
 
 Flow('synth','rt','ricker1 frequency=25')
 Plot('synth',
      '''
-     window min1=0.28 max1=2.28 |
+     window min1=0.28 max1=2.28 | 
      wiggle poly=y yreverse=y title=synthetic transp=y yreverse=y
-     label1=Time unit1=s labelsz=12 titlesz=15 clip=0.002 grid=n
+     label1=Time unit1=s labelsz=12 titlesz=15 clip=0.002 grid=n plotcol=7
      ''')
+Plot('synthw','synth ttops','Overlay')
 
-Result('synth','z zt rt synth','SideBySideAniso')
-
-# label well tops in depth and time
+Result('synth','zw ztw rtw synthw','SideBySideAniso')
 
 # Get seismic data
 
@@ -181,5 +192,9 @@ Flow('seismic','PenobXL_1155.txt',
      echo in=$SOURCE data_format=ascii_float n1=1003 n2=401 |
      dd form=native | reverse which=2
      ''',stdin=0)
+
+# plot seismic + synthetic
+
+# improve registration
 
 End()
