@@ -1,0 +1,6 @@
+c 2
+f .010
+J 4 6
+m 0 0
+T .25 0
+*
